--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -238,6 +238,10 @@ a:focus {
 	transition: background-color 200ms ease, color 200ms ease;
 	cursor: pointer;
 }
+.button.small {
+	padding-inline: 0.3em;
+	padding-block: 0.1em;
+}
 
 .button:hover {
 	background-color: rgba(0, 0, 0, 0.5);
