--- a/app/templates/dash/index.html
+++ b/app/templates/dash/index.html
@@ -38,34 +38,60 @@
                 </ul>
             {% endif %}
         </div>
-        <div class="grid grid-rows-1 grid-cols-2 gap-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
             <div class="flex flex-col w-full p-4 gap-2 border-1 rounded-[5px] border-black h-fit">
-                <h3>Friends</h3>
-                <ul class="flex flex-col gap-2">
-                    {% for friend in friends %}
-                        <li class="bg-[#2C262C] radius-[5px] rounded-[5px]">
-                            <a href="{{ url_for('user.profile', id=friend.friendId) }}"
-                               class="flex items-center gap-4 p-2">
-                                <div class="h-12 w-12">
-                                    {% if friend['image_data'] %}
-                                        <img class="aspect-square"
-                                             src="{{ friend['image_data'] }}"
-                                             alt="image representing the user called {{ friend['friendUsername'] }}" />
-                                    {% else %}
-                                        <div class="bg-gray-700 child h-full">
-                                            <img class="aspect-square"
-                                                 src="{{ url_for('static', filename='logo.png') }}"
-                                                 alt="hookneedle logo because no image available" />
-                                        </div>
-                                    {% endif %}
+                <h3>To-dos</h3>
+                <div class="flex items-stretch w-full gap-2">
+                    <input placeholder="What to do?"
+                           id="todo-input"
+                           type="text"
+                           class="flex-grow border-1 border-black rounded-[5px] px-2 py-2 focus:outline-2 focus:outline-[#66e466]">
+                    <button id="add-item"
+                            class="cursor-pointer border-1 border-black hover:bg-gray-500 px-4 rounded-[5px] text-3xl focus:outline-2 focus:outline-[#66e466]">
+                        +
+                    </button>
+                </div>
+                {% if todos %}
+                    <ul class="flex flex-col gap-2 mt-2">
+                        {% for todo in todos|reverse %}
+                            <li class="flex justify-between items-center ps-2">
+                                <span class="pe-2">{{ todo.content }}</span>
+                                <div class="flex gap-2">
+                                    <button data-id="{{ todo.id }}" class="button small is-secondary edit-todo">
+                                        <svg fill="#000000"
+                                             height="25px"
+                                             width="25px"
+                                             version="1.1"
+                                             id="Capa_1"
+                                             xmlns="http://www.w3.org/2000/svg"
+                                             xmlns:xlink="http://www.w3.org/1999/xlink"
+                                             viewBox="0 0 348.882 348.882"
+                                             xml:space="preserve">
+                                            <title>Edit</title>
+                                            <g>
+                                            <path d="M333.988,11.758l-0.42-0.383C325.538,4.04,315.129,0,304.258,0c-12.187,0-23.888,5.159-32.104,14.153L116.803,184.231 c-1.416,1.55-2.49,3.379-3.154,5.37l-18.267,54.762c-2.112,6.331-1.052,13.333,2.835,18.729c3.918,5.438,10.23,8.685,16.886,8.685 c0,0,0.001,0,0.001,0c2.879,0,5.693-0.592,8.362-1.76l52.89-23.138c1.923-0.841,3.648-2.076,5.063-3.626L336.771,73.176 C352.937,55.479,351.69,27.929,333.988,11.758z M130.381,234.247l10.719-32.134l0.904-0.99l20.316,18.556l-0.904,0.99 L130.381,234.247z M314.621,52.943L182.553,197.53l-20.316-18.556L294.305,34.386c2.583-2.828,6.118-4.386,9.954-4.386 c3.365,0,6.588,1.252,9.082,3.53l0.419,0.383C319.244,38.922,319.63,47.459,314.621,52.943z" />
+                                            <path d="M303.85,138.388c-8.284,0-15,6.716-15,15v127.347c0,21.034-17.113,38.147-38.147,38.147H68.904 c-21.035,0-38.147-17.113-38.147-38.147V100.413c0-21.034,17.113-38.147,38.147-38.147h131.587c8.284,0,15-6.716,15-15 s-6.716-15-15-15H68.904c-37.577,0-68.147,30.571-68.147,68.147v180.321c0,37.576,30.571,68.147,68.147,68.147h181.798 c37.576,0,68.147-30.571,68.147-68.147V153.388C318.85,145.104,312.134,138.388,303.85,138.388z" />
+                                            </g>
+                                        </svg>
+                                    </button>
+                                    <button data-id="{{ todo.id }}" class="button small is-danger delete-todo">
+                                        <svg width="30px"
+                                             height="30px"
+                                             viewBox="0 0 24 24"
+                                             fill="none"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <title>Delete</title>
+                                            <path d="M6 7V18C6 19.1046 6.89543 20 8 20H16C17.1046 20 18 19.1046 18 18V7M6 7H5M6 7H8M18 7H19M18 7H16M10 11V16M14 11V16M8 7V5C8 3.89543 8.89543 3 10 3H14C15.1046 3 16 3.89543 16 5V7M8 7H16" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg>
+                                    </button>
                                 </div>
-                                <h4>{{ friend.friendUsername }}</h4>
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
+                            </li>
+                            {% if not loop.last %}<hr class="w-full m-auto my-2 text-black">{% endif %}
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             </div>
-            <div class="flex flex-col w-full h-auto p-4 gap-2 border-1 rounded-[5px] border-black h-fit">
+            <div class="flex flex-col w-full p-4 gap-2 border-1 rounded-[5px] border-black h-fit">
                 <h3>Your Projects</h3>
                 <a class="button" href='{{ url_for("dash.create") }}'>Add Project</a>
                 <ul class="flex flex-col gap-2">
@@ -74,9 +100,9 @@
                             <a href="/project/{{ project['id'] }}"
                                class="flex items-center gap-4 p-2 w-full">
                                 <div class="h-12 w-12">
-                                    {% if project['image_blob'] %}
+                                    {% if project['image_data'] %}
                                         <img class="aspect-square"
-                                             src="{{ project['image_blob'] }}"
+                                             src="{{ project['image_data'] }}"
                                              alt="image representing the project called {{ project['name'] }}" />
                                     {% else %}
                                         <div class="bg-gray-700 child h-full">
@@ -107,6 +133,36 @@
                 </ul>
             </div>
         </div>
+        <div class="flex flex-col w-full p-4 gap-2 border-1 rounded-[5px] border-black h-fit">
+            <h3>Friends</h3>
+            {% if not friends %}
+                <div>You don't have any friends yet!</div>
+            {% else %}
+                <ul class="flex flex-col gap-2">
+                    {% for friend in friends %}
+                        <li class="bg-[#2C262C] radius-[5px] rounded-[5px]">
+                            <a href="{{ url_for('user.profile', id=friend.friendId) }}"
+                               class="flex items-center gap-4 p-2">
+                                <div class="h-12 w-12">
+                                    {% if friend['image_data'] %}
+                                        <img class="aspect-square"
+                                             src="{{ friend['image_data'] }}"
+                                             alt="image representing the user called {{ friend['friendUsername'] }}" />
+                                    {% else %}
+                                        <div class="bg-gray-700 child h-full">
+                                            <img class="aspect-square"
+                                                 src="{{ url_for('static', filename='logo.png') }}"
+                                                 alt="hookneedle logo because no image available" />
+                                        </div>
+                                    {% endif %}
+                                </div>
+                                <h4>{{ friend.friendUsername }}</h4>
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
     {% endif %}
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -120,7 +176,6 @@
                     dropdown.classList.add('is-active'); 
                 })
             })
-
 
             document.addEventListener('click', async (e) => {
                 let dropdown = document.querySelector(`[data-key = '${currentKey}']`)
@@ -166,7 +221,7 @@
             })
 
             denyFriendBtn?.forEach(btn => {
-                btn.addEventListener('click', () => {
+                btn.addEventListener('click', async () => {
                     let friendId = btn.dataset.id;
 
                     fetch(`/user/removefriend/${friendId}`, {
@@ -176,6 +231,58 @@
                     .catch((error) => console.error('CAUGHT ERROR ON POST', error));
                 })
             })
+
+            addTodoBtn = document.querySelector('#add-item');
+            todoInput = document.querySelector('#todo-input')
+
+            addTodoBtn.addEventListener('click', async () => {
+                let input = todoInput.value;
+                let id = todoInput.dataset?.id;
+                !id ? id = null : id = id;
+                let body = {input: input, id: id};
+
+                fetch(`/user/addTodo`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(body)
+                })
+                .then(()=> {
+                    todoInput.value = ''
+                    console.log(input)
+                })
+                .then(()=> window.location.reload())
+                .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+            })
+
+            deleteTodoBtn = document.querySelectorAll('.delete-todo');
+
+            deleteTodoBtn?.forEach(btn => {
+                btn.addEventListener('click', async () => {
+                    let todoId = btn.dataset.id;
+                    console.log(todoId)
+
+                    fetch(`/user/deleteTodo/${todoId}`, {
+                        method: 'POST',
+                    })
+                    .then(()=> window.location.reload())
+                    .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+
+                })
+            })
+
+            editTodoBtn = document.querySelectorAll('.edit-todo');
+
+            editTodoBtn?.forEach(btn => btn.addEventListener('click', async () => {
+                let todoId = btn.dataset.id;
+                let todoItem = btn.parentElement.previousElementSibling;
+                let todoText = todoItem.textContent;
+                addTodoBtn.textContent = '✓';
+                todoItem.parentElement.style.borderLeft = 'thick solid #66e466';
+                todoInput.value = todoText;
+                todoInput.select();
+                todoInput.dataset.id = todoId;
+                
+            }))
         })
     </script>
 {% endblock %}
