--- a/app/templates/project/create.html
+++ b/app/templates/project/create.html
@@ -109,6 +109,20 @@
                         <label for="end-date" class="label">Goal End Date</label>
                         <input id="end-date" class="input" type="date" name="end-date" />
                     </div>
+                    <div class="field">
+                        <label for="end-date" class="label">Goal End Date</label>
+                        <input id="end-date" class="input" type="date" name="end-date" />
+                    </div>
+                    <div class="field">
+                        <label for="visibility" class="label">Visibility</label>
+                        <div class="select">
+                            <select name="visibility" id="visibility">
+                                <option value="private">private</option>
+                                <option value="friends">friends</option>
+                                <option value="public">public</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-btn-ctn">
                     <button type="submit" class="button">Save Changes</button>
